# SamToast

./: .gitignore  CLAUDE.md  README.md  TechLab.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: TEST_CHECKLIST.md
docs/superpowers/plans/: 2026-04-12-funny-toast-alarm-plan.md
docs/superpowers/specs/: 2026-04-12-funny-toast-alarm-design.md
sample/html/cat-demo/: index.html  style.css
sample/html/radar-demo/: index.html  style.css
sample/html/video-demo/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  focus.rs  hooks_config.rs  lib.rs  main.rs  notification.rs  server.rs  session.rs  sound.rs
src/notification/: image.ts  index.html  main.ts  style.css
src/settings/: events.ts  general.ts  index.html  main.ts  notification.ts  preview.ts  store.ts  style.css  ui.ts
test_assets/: radar_animation.html
