[package]
name = "funny-toast-alarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "funny_toast_alarm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", default-features = false, features = ["mp3", "wav", "vorbis", "flac"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Media_Audio",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Registry",
  "Win32_Security",
] }
